# flensorflowlite

./: .envrc  .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/kotlin/ai/letterassist/flensorflowlite_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/linux/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/test_ffi_binding/: pubspec.yaml
example/test_ffi_binding/android/app/: build.gradle
example/test_ffi_binding/android/app/src/main/: AndroidManifest.xml
example/test_ffi_binding/ios/Runner.xcodeproj/: project.pbxproj
example/test_ffi_binding/lib/: main.dart
example/test_ffi_binding/linux/: CMakeLists.txt
example/test_ffi_binding/linux/flutter/: generated_plugins.cmake
example/test_ffi_binding/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/test_ffi_binding/macos/Runner/Configs/: AppInfo.xcconfig
example/test_ffi_binding/windows/: CMakeLists.txt
example/test_ffi_binding/windows/flutter/: generated_plugins.cmake
example/text_classification/: clean.sh  pubspec.yaml
example/text_classification/android/app/: build.gradle
example/text_classification/integration_test/: tflite_flutter_test.dart
example/text_classification/ios/: Podfile
example/text_classification/ios/Runner.xcodeproj/: project.pbxproj
example/text_classification/lib/: classifier.dart  main.dart
example/text_classification/macos/: Podfile
example/text_classification/macos/Runner.xcodeproj/: project.pbxproj
example/text_classification/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/runner/: Runner.rc  main.cpp
ios/: flensorflowlite.podspec
ios/Classes/: flensorflowlite.c
lib/: flensorflowlite.dart
lib/src/: delegate.dart  interpreter.dart  interpreter_options.dart  isolate_interpreter.dart  model.dart  tensor.dart
lib/src/bindings/: tensorflow_lite_bindings.dart  tensorflow_lite_bindings_generated.dart
lib/src/delegates/: coreml_delegate.dart  gpu_delegate.dart  metal_delegate.dart  xnnpack_delegate.dart
lib/src/util/: byte_conversion_utils.dart
linux/: CMakeLists.txt
macos/: flensorflowlite.podspec
macos/Classes/: flensorflowlite.c  metal_delegate.h
src/: CMakeLists.txt
src/cmake/: build-apple.sh  patch.apple.flatbuffers.CMakeLists_txt  patch.apple.tensorflow.CMakeLists_txt  patch.apple.tensorflow.flatbuffers_cmake
src/scripts/: build-apple.sh
windows/: CMakeLists.txt
